fix detect changes
verinice-veo#3719